--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
 	<servlet>
 		<servlet-name>jsp</servlet-name>
-		<jsp-file>/WEB-INF/views/index.jsp</jsp-file>
+		<jsp-file>/index.jsp</jsp-file>
 	</servlet>
 
 	<servlet-mapping>
