--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,24 @@
     <welcome-file-list>
         <welcome-file>views/index.jsp</welcome-file>
     </welcome-file-list>
+
+    <servlet>
+        <servlet-name>GradesServlet</servlet-name>
+        <servlet-class>cyu.GradesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GradesServlet</servlet-name>
+        <url-pattern>/gradesManagement</url-pattern>
+        <url-pattern>/grades</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ClassesServlet</servlet-name>
+        <servlet-class>cyu.ClassesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ClassesServlet</servlet-name>
+        <url-pattern>/classes</url-pattern>
+        <url-pattern>/classe</url-pattern>
+    </servlet-mapping>
 </web-app>
