--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,67 @@
     <welcome-file-list>
         <welcome-file>views/index.jsp</welcome-file>
     </welcome-file-list>
+
+    <!-- the mapping is done here in complement of the mapping annotation, as some of the servlets are not found with just the annotations -->
+    <servlet>
+        <servlet-name>ClassesServlet</servlet-name>
+        <servlet-class>cyu.ClassesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ClassesServlet</servlet-name>
+        <url-pattern>/classes</url-pattern>
+        <url-pattern>/classe</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>GradesServlet</servlet-name>
+        <servlet-class>cyu.GradesServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GradesServlet</servlet-name>
+        <url-pattern>/grades</url-pattern>
+        <url-pattern>/gradesManagement</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>cyu.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PDFGeneratorServlet</servlet-name>
+        <servlet-class>cyu.PDFGeneratorServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PDFGeneratorServlet</servlet-name>
+        <url-pattern>/pdf</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ScheduleServlet</servlet-name>
+        <servlet-class>cyu.ScheduleServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ScheduleServlet</servlet-name>
+        <url-pattern>/schedule</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>PathwayServlet</servlet-name>
+        <servlet-class>cyu.PathwayServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PathwayServlet</servlet-name>
+        <url-pattern>/pathway</url-pattern>
+        <url-pattern>/pathways</url-pattern>
+    </servlet-mapping>
+
+    <listener>
+        <listener-class>cyu.HibernateListener</listener-class>
+    </listener>
 </web-app>
